changes to code

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,5 +1,5 @@
 <!--sidebar-->
-<c-sidebar
+<!-- <c-sidebar
   #sidebar="cSidebar"
   class="d-print-none sidebar sidebar-fixed"
   id="sidebar"
@@ -32,14 +32,14 @@
     toggle="unfoldable"
     cSidebarToggle="sidebar"
   />
-</c-sidebar>
+</c-sidebar> -->
 
 <!--main-->
 <div class="wrapper d-flex flex-column min-vh-100 bg-light dark:bg-transparent">
   <!--app-header-->
-  <app-default-header class="mb-4 d-print-none header header-sticky" position="sticky" sidebarId="sidebar" />
+  <app-default-header />
   <!--app-body-->
-  <div class="body flex-grow-1 px-3">
+  <div class="body flex-grow-1 p-3">
     <c-container breakpoint="lg" class="h-auto">
       <router-outlet />
     </c-container>
