--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -1,59 +1,24 @@
 <!--<c-header class="mb-4 d-print-none" position="sticky">-->
 <ng-container>
-  <c-container [fluid]="true">
-    <button
-      toggle="visible"
-      cHeaderToggler
-      [cSidebarToggle]="sidebarId"
-      class="ps-1"
-    >
-      <svg cIcon
-        name="cilMenu"
-        size="lg"
-      ></svg>
-    </button>
-    <c-header-nav class="d-none d-lg-flex me-auto">
-      <c-nav-item>
-        <a cNavLink routerLink="/dashboard" routerLinkActive="active">
-          Dashboard
+    <c-navbar colorScheme="light" expand="md" placement="sticky-top" [style.width.%]="100">
+      <c-container fluid>
+        <button [cNavbarToggler]="collapseRef"></button>
+        <a cNavbarBrand class="fw-light fs-6 logo-text-clr">
+          ROSENGRAVE 
         </a>
-      </c-nav-item>
-      <c-nav-item>
-        <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>
-      </c-nav-item>
-      <c-nav-item>
-        <a cNavLink routerLink="/settings" routerLinkActive="active">
-          Settings
-        </a>
-      </c-nav-item>
-    </c-header-nav>
-
-    <c-header-nav class="d-none d-lg-flex">
-      <c-nav-item>
-        <a routerLink="./" cNavLink>
-          <svg cIcon name="cilBell" size="lg"></svg>
-        </a>
-      </c-nav-item>
-      <c-nav-item>
-        <a routerLink="./" cNavLink>
-          <svg cIcon name="cilList" size="lg"></svg>
-        </a>
-      </c-nav-item>
-      <c-nav-item>
-        <a routerLink="./" cNavLink>
-          <svg cIcon name="cilEnvelopeOpen" size="lg"></svg>
-        </a>
-      </c-nav-item>
-    </c-header-nav>
-    <c-header-nav class="ms-3">
-      <ng-container *ngTemplateOutlet="userDropdown"></ng-container>
-    </c-header-nav>
-
-  </c-container>
-  <c-header-divider></c-header-divider>
-  <c-container [fluid]="true">
-    <c-breadcrumb-router class="ms-2"></c-breadcrumb-router>
-  </c-container>
+        <div #collapseRef="cCollapse" navbar cCollapse>
+          <c-navbar-nav class="me-auto mb-2 mb-lg-0 fs-6 text-uppercase">
+            <c-nav-item *ngFor="let nav of navItems">
+              <a cNavLink routerLink="{{ nav.link }}">{{ nav.label }}</a>
+            </c-nav-item>
+          </c-navbar-nav>
+          <form cForm class="d-flex" role="search">
+            <input cFormControl type="search" placeholder="Search" aria-label="Search" class="me-2">
+            <button cButton color="danger" variant="outline">Search</button>
+          </form>
+        </div>
+      </c-container>
+    </c-navbar>
 </ng-container>
 <!--</c-header>-->
 
