--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -458,7 +458,7 @@ $theme-colors: (
 // $font-size-root effects the value of `rem`, which is used for as well font sizes, paddings and margins
 // $font-size-base effects the font size of the body text
 // $font-size-root:              null;
-// $font-size-base:              1rem; // Assumes the browser default, typically `16px`
+$font-size-base:              1rem; // Assumes the browser default, typically `16px`
 // $font-size-sm:                $font-size-base * .875;
 // $font-size-lg:                $font-size-base * 1.25;
 
@@ -476,21 +476,21 @@ $theme-colors: (
 // $line-height-sm:              1.25;
 // $line-height-lg:              2;
 
-// $h1-font-size:                $font-size-base * 2.5;
-// $h2-font-size:                $font-size-base * 2;
-// $h3-font-size:                $font-size-base * 1.75;
-// $h4-font-size:                $font-size-base * 1.5;
-// $h5-font-size:                $font-size-base * 1.25;
-// $h6-font-size:                $font-size-base;
+$h1-font-size:                $font-size-base * 2.5;
+$h2-font-size:                $font-size-base * 2;
+$h3-font-size:                $font-size-base * 1.75;
+$h4-font-size:                $font-size-base * 1.5;
+$h5-font-size:                $font-size-base * 1.25;
+$h6-font-size:                $font-size-base;
 
 // scss-docs-start font-sizes
 $font-sizes: (
-  // 1: $h1-font-size,
-  // 2: $h2-font-size,
-  // 3: $h3-font-size,
-  // 4: $h4-font-size,
-  // 5: $h5-font-size,
-  // 6: $h6-font-size
+  1: $h1-font-size,
+  2: $h2-font-size,
+  3: $h3-font-size,
+  4: $h4-font-size,
+  5: $h5-font-size,
+  6: $h6-font-size,
   7: 12px
 );
 // scss-docs-end font-sizes
