--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -1,1 +1,30 @@
-<p>products works!</p>
+<ng-container *ngFor="let c of productCategories">
+    <h4>{{ c.category_name }}</h4>
+
+    <div class="mt-3">
+        <c-row>
+            <c-col *ngFor="let p of c.products; index as i" md="3">
+                <c-card class="mb-3">
+                    <div>
+                        <h5 class="m-0 p-0">
+                            <c-badge color="dark" class="price">${{ p.product_price }}</c-badge>
+                        </h5>
+                        <img cCardImg="top" src="{{ p.product_images[0]?.image_secure_url }}" [style.height.px]="215">
+                    </div>
+                    <c-card-body>
+                        <h6 cCardTitle>{{ p.product_name }}</h6>
+                        <p cCardText>{{ p.product_description }}</p>
+                    </c-card-body>
+                    <c-card-footer>
+                        <div class="d-grid gap-2">
+                            <button cButton color="warning" class="text-uppercase fs-7 fw-light"
+                                cOffcanvasToggle="OffcanvasBottom">
+                                <svg [cIcon]="icons.cilCart" title="Add to cart"></svg>
+                                Add to cart</button>
+                        </div>
+                    </c-card-footer>
+                </c-card>
+            </c-col>
+        </c-row>
+    </div>
+</ng-container>
