--- a/src/app/containers/default-layout/default-footer/default-footer.component.html
+++ b/src/app/containers/default-layout/default-footer/default-footer.component.html
@@ -1,12 +1,9 @@
 <!--<c-footer>-->
   <div>
-    <a href="https://coreui.io/pro/angular/" target="_blank">CoreUI</a>
-    <span> &copy; 2023 creativeLabs</span>
+    <!-- <a href="https://coreui.io/pro/angular/" target="_blank">CoreUI</a> -->
+    <!-- <span> &copy; 2023 creativeLabs</span> -->
   </div>
   <div class="ms-auto">
-    Powered by
-    <a href="https://coreui.io/pro/angular" target="_blank">
-      <span> CoreUI for Angular</span>
-    </a>
+    <span class="fw-light fs-6 text-uppercase"> &copy; 2023 Rosengrave</span>
   </div>
 <!--</c-footer>-->
