--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -15,10 +15,10 @@
               <a cNavLink routerLink="{{ nav.link }}">{{ nav.label }}</a>
             </c-nav-item>
           </c-navbar-nav>
-          <form cForm class="d-flex" role="search">
+          <!-- <form cForm class="d-flex" role="search">
             <input cFormControl type="search" placeholder="Search" aria-label="Search" class="me-2">
             <button cButton color="danger" variant="outline">Search</button>
-          </form>
+          </form> -->
         </div>
       </c-container>
     </c-navbar>
