--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -1,30 +1,51 @@
-<ng-container *ngFor="let c of productCategories">
-    <h4>{{ c.category_name }}</h4>
+<c-row>
+    <ng-container *ngFor="let c of productCategories; index as i">
+        <c-col md="3">
+            <c-card class="mb-3">
+                <div>
+                    <img cCardImg="top" src="{{ c.image_url }}">
+                </div>
+                <c-card-body class="text-center">
+                    <h6 cCardTitle>{{ c.category_name }}</h6>
+                </c-card-body>
+                <c-card-footer>
+                    <div class="d-grid gap-2">
+                        <button cButton color="warning" class="text-uppercase fs-7 fw-light" (click)="onProductView(i)"
+                            cOffcanvasToggle="OffcanvasBottom">
+                            <svg [cIcon]="icons.cilPencil" title="Customize"></svg>
+                            View</button>
+                    </div>
+                </c-card-footer>
+            </c-card>
+        </c-col>
+    </ng-container>
+</c-row>
 
+<c-row *ngIf="products">
     <div class="mt-3">
         <c-row>
-            <c-col *ngFor="let p of c.products; index as i" md="3">
-                <c-card class="mb-3">
+            <c-col *ngFor="let p of products" md="3">
+                <c-card class="mb-3 fade-in">
                     <div>
                         <h5 class="m-0 p-0">
-                            <c-badge color="dark" class="price">${{ p.product_price }}</c-badge>
+                            <!-- <c-badge color="dark" class="price">${{ p.product_price }}</c-badge> -->
                         </h5>
-                        <img cCardImg="top" src="{{ p.product_images[0]?.image_secure_url }}" [style.height.px]="215">
+                        <img cCardImg="top" src="{{ p.product_images[0]?.image_secure_url }}" [style.max-height.px]="190">
                     </div>
                     <c-card-body>
-                        <h6 cCardTitle>{{ p.product_name }}</h6>
-                        <p cCardText>{{ p.product_description }}</p>
+                        <h6 cCardTitle class="text-center">{{ p.product_name }}</h6>
+                        <!-- <p cCardText>{{ p.product_description }}</p> -->
                     </c-card-body>
-                    <c-card-footer>
+                    <!-- <c-card-footer>
                         <div class="d-grid gap-2">
-                            <button cButton color="warning" class="text-uppercase fs-7 fw-light"
+                            <button cButton disabled color="warning" class="text-uppercase fs-7 fw-light"
                                 cOffcanvasToggle="OffcanvasBottom">
-                                <svg [cIcon]="icons.cilCart" title="Add to cart"></svg>
-                                Add to cart</button>
+                                <svg [cIcon]="icons.cilPencil" title="Customize"></svg>
+                                Customize</button>
                         </div>
-                    </c-card-footer>
+                    </c-card-footer> -->
                 </c-card>
             </c-col>
         </c-row>
     </div>
-</ng-container>
+</c-row>
