--- a/src/app/views/products/products.component.scss
+++ b/src/app/views/products/products.component.scss
@@ -3,3 +3,20 @@
     top: 1px;
     right: 1px;
 }
+
+.fade-in {
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in-out;
+	animation-duration: 1s;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
