fixed button not closing

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -57,6 +57,6 @@
     Welcome to Our New Home! <br/><br/>
     We're thrilled to introduce our brand new website. Please pardon our digital dust as we put on the finishing touches. Stay tuned for an amazing experience!</c-modal-body>
   <c-modal-footer>
-    <button cButton color="dark">Awesome!</button>
+    <button [cModalToggle]="staticBackdropModal.id" cButton color="dark">Awesome!</button>
   </c-modal-footer>
 </c-modal>
