--- a/src/app/views/how-to-order/how-to-order.component.html
+++ b/src/app/views/how-to-order/how-to-order.component.html
@@ -1,1 +1,4 @@
-<p>how-to-order works!</p>
+<div class="d-flex justify-content-center align-items-center">
+    <img cImg src="./assets/img/qr_code.png" [style.height.px]="600"/>
+</div>
+
