--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -36,14 +36,15 @@
                         <h6 cCardTitle class="text-center">{{ p.product_name }}</h6>
                         <!-- <p cCardText>{{ p.product_description }}</p> -->
                     </c-card-body>
-                    <!-- <c-card-footer>
+                    <c-card-footer>
                         <div class="d-grid gap-2">
-                            <button cButton disabled color="warning" class="text-uppercase fs-7 fw-light"
+                            <button cButton color="warning" class="text-uppercase fs-7 fw-light"
+                                (click)="onAddToCart(p)"
                                 cOffcanvasToggle="OffcanvasBottom">
                                 <svg [cIcon]="icons.cilPencil" title="Customize"></svg>
                                 Customize</button>
                         </div>
-                    </c-card-footer> -->
+                    </c-card-footer>
                 </c-card>
             </c-col>
         </c-row>
