--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -1,46 +1,38 @@
 <!--<c-header class="mb-4 d-print-none" position="sticky">-->
 <ng-container>
-    <c-navbar colorScheme="light" expand="md" placement="sticky-top" [style.width.%]="100">
-      <c-container fluid>
-        <button [cNavbarToggler]="collapseRef"></button>
-        <!-- <a cNavbarBrand class="fw-light fs-6 logo-text-clr">
+  <c-navbar colorScheme="light" expand="md" placement="sticky-top" [style.width.%]="100">
+    <c-container fluid>
+      <button [cNavbarToggler]="collapseRef"></button>
+      <!-- <a cNavbarBrand class="fw-light fs-6 logo-text-clr">
           ROSENGRAVE 
         </a> -->
-        <a cNavbarBrand routerLink="/" class="fw-light fs-6 logo-text-clr">
-          <img src="./assets/img/logo.png" alt="" width="200"/>
-        </a>
-        <div #collapseRef="cCollapse" navbar cCollapse>
-          <c-navbar-nav class="me-auto mb-2 mb-lg-0 fs-6 text-uppercase">
-            <c-nav-item *ngFor="let nav of navItems">
-              <a cNavLink routerLink="{{ nav.link }}">{{ nav.label }}</a>
-            </c-nav-item>
-          </c-navbar-nav>
-          <!-- <form cForm class="d-flex" role="search">
+      <a cNavbarBrand routerLink="/" class="fw-light fs-6 logo-text-clr">
+        <img src="./assets/img/logo.png" alt="" width="200" />
+      </a>
+      <div #collapseRef="cCollapse" navbar cCollapse>
+        <c-navbar-nav class="me-auto mb-2 mb-lg-0 fs-6 text-uppercase">
+          <c-nav-item *ngFor="let nav of navItems">
+            <a cNavLink routerLink="{{ nav.link }}">{{ nav.label }}</a>
+          </c-nav-item>
+        </c-navbar-nav>
+        <button cButton color="danger" variant="outline" (click)="onViewCart()">
+          <svg cIcon class="me-2" name="cilCart"></svg>
+          Cart
+        </button>
+        <!-- <form cForm class="d-flex" role="search">
             <input cFormControl type="search" placeholder="Search" aria-label="Search" class="me-2">
             <button cButton color="danger" variant="outline">Search</button>
           </form> -->
-        </div>
-      </c-container>
-    </c-navbar>
+      </div>
+    </c-container>
+  </c-navbar>
 </ng-container>
 <!--</c-header>-->
 
 <ng-template #userDropdown>
   <c-dropdown alignment="end" variant="nav-item">
-    <button
-      cButton
-      color=""
-      [caret]="false"
-      cDropdownToggle
-      class="py-0"
-    >
-      <c-avatar
-        cTextColor="primary"
-        shape="rounded-1"
-        size="md"
-        src="./assets/img/avatars/8.jpg"
-        status="success"
-      >
+    <button cButton color="" [caret]="false" cDropdownToggle class="py-0">
+      <c-avatar cTextColor="primary" shape="rounded-1" size="md" src="./assets/img/avatars/8.jpg" status="success">
       </c-avatar>
     </button>
     <ul cDropdownMenu class="pt-0 pr-5 w-auto">
@@ -118,7 +110,7 @@
         </a>
       </li>
       <li>
-        <hr cDropdownDivider/>
+        <hr cDropdownDivider />
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
@@ -130,4 +122,3 @@
     </ul>
   </c-dropdown>
 </ng-template>
-
