--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -3,6 +3,7 @@
   <!--app-header-->
   <app-default-header />
   <app-cart></app-cart>
+  <app-customize-item></app-customize-item>
   <!--app-body-->
   <div class="body flex-grow-1 p-3">
     <c-container breakpoint="lg" class="h-auto">
