--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -39,7 +39,7 @@
                     <c-card-footer>
                         <div class="d-grid gap-2">
                             <button cButton color="warning" class="text-uppercase fs-7 fw-light"
-                                (click)="onAddToCart(p)"
+                                (click)="onCustomizeProduct(p)"
                                 cOffcanvasToggle="OffcanvasBottom">
                                 <svg [cIcon]="icons.cilPencil" title="Customize"></svg>
                                 Customize</button>
