--- a/src/app/components/customize-item/customize-item.component.scss
+++ b/src/app/components/customize-item/customize-item.component.scss
@@ -1,7 +1,27 @@
 input[type="radio"] {
-    opacity: 1;
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
-input[type="radio"]:checked + .card {
-    border: 1px solid orangered;
+input[type="radio"]:checked+.card {
+    border: 2px solid orangered;
+}
+
+input[type="radio"]+.card {
+    border-width: 2px;
+}
+
+.card-img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    cursor: pointer;
+}
+
+.plus {
+    display: flex;
+    align-items: center;
 }
