--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -1,52 +1,94 @@
 <c-row>
-    <ng-container *ngFor="let c of productCategories; index as i">
-        <c-col md="3">
-            <c-card class="mb-3">
+  <c-nav variant="pills" class="nav-justified">
+    <c-nav-item *ngFor="let c of productCategories; index as i">
+      <a
+        [cTabContent]="tabContent"
+        cNavLink
+        (click)="onProductView(i)"
+        [tabPaneIdx]="i">
+        {{ c.category_name }}
+      </a>
+    </c-nav-item>
+  </c-nav>
+  <c-tab-content
+    #tabContent="cTabContent"
+    [activeTabPaneIdx]="activePane"
+    (activeTabPaneIdxChange)="onTabChange($event)">
+    <c-tab-pane class="p-3" *ngFor="let c of productCategories; index as i">
+      <h4>Products</h4>
+      <hr />
+      <c-row *ngIf="products2 && !products.length">
+        <div class="mt-3">
+          <c-row>
+            <c-col *ngFor="let p of products2" md="3">
+              <c-card class="mb-3 fade-in">
                 <div>
-                    <img cCardImg="top" src="{{ c.image_url }}">
+                  <h5 class="m-0 p-0">
+                    <!-- <c-badge color="dark" class="price">${{ p.product_price }}</c-badge> -->
+                  </h5>
+                  <img
+                    cCardImg="top"
+                    src="{{ p.images[0]?.image_secure_url }}"
+                    [style.max-height.px]="190" />
                 </div>
-                <c-card-body class="text-center">
-                    <h6 cCardTitle>{{ c.category_name }}</h6>
+                <c-card-body>
+                  <h6 cCardTitle class="text-center">{{ p.product_name }}</h6>
+                  <!-- <p cCardText>{{ p.product_description }}</p> -->
                 </c-card-body>
                 <c-card-footer>
-                    <div class="d-grid gap-2">
-                        <button cButton color="warning" class="text-uppercase fs-7 fw-light" (click)="onProductView(i)"
-                            cOffcanvasToggle="OffcanvasBottom">
-                            <svg [cIcon]="icons.cilPencil" title="Customize"></svg>
-                            View</button>
-                    </div>
+                  <div class="d-grid gap-2">
+                    <button
+                      cButton
+                      color="warning"
+                      class="text-uppercase fs-7 fw-light"
+                      (click)="onCustomizeProduct(p)"
+                      cOffcanvasToggle="OffcanvasBottom">
+                      <svg [cIcon]="icons.cilPencil" title="Customize"></svg>
+                      Customize
+                    </button>
+                  </div>
                 </c-card-footer>
-            </c-card>
-        </c-col>
-    </ng-container>
-</c-row>
-
-<c-row *ngIf="products">
-    <div class="mt-3">
-        <c-row>
-            <c-col *ngFor="let p of products" md="3">
-                <c-card class="mb-3 fade-in">
-                    <div>
-                        <h5 class="m-0 p-0">
-                            <!-- <c-badge color="dark" class="price">${{ p.product_price }}</c-badge> -->
-                        </h5>
-                        <img cCardImg="top" src="{{ p.product_images[0]?.image_secure_url }}" [style.max-height.px]="190">
-                    </div>
-                    <c-card-body>
-                        <h6 cCardTitle class="text-center">{{ p.product_name }}</h6>
-                        <!-- <p cCardText>{{ p.product_description }}</p> -->
-                    </c-card-body>
-                    <c-card-footer>
-                        <div class="d-grid gap-2">
-                            <button cButton color="warning" class="text-uppercase fs-7 fw-light"
-                                (click)="onCustomizeProduct(p)"
-                                cOffcanvasToggle="OffcanvasBottom">
-                                <svg [cIcon]="icons.cilPencil" title="Customize"></svg>
-                                Customize</button>
-                        </div>
-                    </c-card-footer>
-                </c-card>
+              </c-card>
             </c-col>
-        </c-row>
-    </div>
+          </c-row>
+        </div>
+      </c-row>
+      <c-row *ngIf="products">
+        <div class="mt-3">
+          <c-row>
+            <c-col *ngFor="let p of products" md="3">
+              <c-card class="mb-3 fade-in">
+                <div>
+                  <h5 class="m-0 p-0">
+                    <!-- <c-badge color="dark" class="price">${{ p.product_price }}</c-badge> -->
+                  </h5>
+                  <img
+                    cCardImg="top"
+                    src="{{ p.product_images[0]?.image_secure_url }}"
+                    [style.max-height.px]="190" />
+                </div>
+                <c-card-body>
+                  <h6 cCardTitle class="text-center">{{ p.product_name }}</h6>
+                  <!-- <p cCardText>{{ p.product_description }}</p> -->
+                </c-card-body>
+                <c-card-footer>
+                  <div class="d-grid gap-2">
+                    <button
+                      cButton
+                      color="warning"
+                      class="text-uppercase fs-7 fw-light"
+                      (click)="onCustomizeProduct(p)"
+                      cOffcanvasToggle="OffcanvasBottom">
+                      <svg [cIcon]="icons.cilPencil" title="Customize"></svg>
+                      Customize
+                    </button>
+                  </div>
+                </c-card-footer>
+              </c-card>
+            </c-col>
+          </c-row>
+        </div>
+      </c-row>
+    </c-tab-pane>
+  </c-tab-content>
 </c-row>
