--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -1,22 +1,46 @@
 <c-row>
-  <c-nav variant="pills" class="nav-justified">
-    <c-nav-item *ngFor="let c of productCategories; index as i">
-      <a
-        [cTabContent]="tabContent"
-        cNavLink
-        (click)="onProductView(i)"
-        [tabPaneIdx]="i">
-        {{ c.category_name }}
-      </a>
-    </c-nav-item>
-  </c-nav>
+  <c-card class="px-0">
+    <img
+      cCardImg="top"
+      src="./assets/img/react.jpg"
+      [style.max-height.px]="200" />
+    <c-card-footer>
+      <c-nav variant="pills" class="nav-justified">
+        <c-nav-item *ngFor="let c of productCategories; index as i">
+          <a
+            [cTabContent]="tabContent"
+            cNavLink
+            (click)="onProductView(i)"
+            [tabPaneIdx]="i">
+            {{ c.category_name }}
+          </a>
+        </c-nav-item>
+      </c-nav>
+    </c-card-footer>
+  </c-card>
   <c-tab-content
     #tabContent="cTabContent"
     [activeTabPaneIdx]="activePane"
     (activeTabPaneIdxChange)="onTabChange($event)">
     <c-tab-pane class="p-3" *ngFor="let c of productCategories; index as i">
-      <h4>Products</h4>
-      <hr />
+      <c-row class="d-flex">
+        <c-col md="7">
+          <h4>Products</h4>
+        </c-col>
+        <c-col md="5" class="d-flex justify-content-end">
+          <select
+            [style.width.%]="50"
+            aria-label="Large select example"
+            cSelect
+            class="mb-3">
+            <option>Select</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        </c-col>
+      </c-row>
+      <hr class="m-0" />
       <c-row *ngIf="products2 && !products.length">
         <div class="mt-3">
           <c-row>
