--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -32,11 +32,11 @@
             [style.width.%]="50"
             aria-label="Large select example"
             cSelect
+            (change)="onSort($event)"
             class="mb-3">
-            <option>Select</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+            <option value="0">Name</option>
+            <option value="1">Price: High to Low</option>
+            <option value="2">Price: Low to High</option>
           </select>
         </c-col>
       </c-row>
