--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -50,8 +50,13 @@
     <hr />
     <h5>Total: ${{ getTotalCartPrice() }} CAD</h5>
     <div class="d-grid gap-2">
-      <button cButton color="info" class="text-uppercase fs-7 fw-light mt-4">
-        Order
+      <button
+        cButton
+        color="info"
+        routerLink="checkout"
+        class="text-uppercase fs-7 fw-light mt-4"
+        [disabled]="!cartItems.length">
+        Proceed to Checkout
       </button>
     </div>
   </c-offcanvas-body>
