--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -1,7 +1,6 @@
-<form novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
-  <input type="text" formControlName="name" placeholder="Jane Doe" />
-  <ngx-stripe-card
-    [options]="cardOptions"
-    [elementsOptions]="elementsOptions"></ngx-stripe-card>
-  <button type="submit">CREATE TOKEN</button>
+<form (submit)="handlePayment()">
+  <label for="card-element">Credit or debit card</label>
+  <div #cardElement id="card-element"></div>
+
+  <button type="submit">Pay</button>
 </form>
