--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -55,7 +55,10 @@
   </c-modal-header>
   <c-modal-body>
     Welcome to Our New Home! <br/><br/>
-    We're thrilled to introduce our brand new website. Please pardon our digital dust as we put on the finishing touches. Stay tuned for an amazing experience!</c-modal-body>
+    We're thrilled to introduce our brand new website. Please pardon our digital dust as we put on the finishing touches. Stay tuned for an amazing experience!
+    <br /><br />
+    Contact Email: <b>rosengravelaser@gmail.com</b>
+  </c-modal-body>
   <c-modal-footer>
     <button [cModalToggle]="staticBackdropModal.id" cButton color="dark">Awesome!</button>
   </c-modal-footer>
